projects/vb6parse/snapshots/parsers/cst/declarations/variables/public_withevents_listbox.snap
---
source: projects/vb6parse/tests/declarations/variables.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PublicKeyword
          text: Public
        - kind: Whitespace
          text: " "
        - kind: WithEventsKeyword
          text: WithEvents
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: lstItems
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ListBox
        - kind: Newline
          text: "\n"
